--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "negotiator": "^0.6.2",
     "nodemon": "^1.19.1"
